objects/Case.object
<CustomObject>
    <fields>
        <fullName>EV_Audit_Type__c</fullName>
        <label>EV SSL Audit Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>WebTrust</fullName>
                </value>
                <value>
                    <fullName>ETSI EN 319 411</fullName>
                </value>
                <value>
                    <fullName>ETSI TS 102 042</fullName>
                </value>
                <value>
                    <fullName>Equivalent WebTrust</fullName>
                </value>
                <value>
                    <fullName>Equivalent ETSI EN 319 411</fullName>
                </value>
                <value>
                    <fullName>Equivalent ETSI 102 042</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EV_Code_Signing_Audit_ALV_Comments__c</fullName>
        <inlineHelpText>Explanation about why audit accepted when ALV status is FAIL </inlineHelpText>
        <label>EV Code Signing Audit ALV Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EV_Code_Signing_Audit_Auth_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check only when authenticity of audit statement has been confirmed </inlineHelpText>
        <label>EV Code Signing Audit Auth Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EV_Code_Signing_Audit_AutoReviewResults__c</fullName>
        <inlineHelpText>Results returned by ALV service</inlineHelpText>
        <label>EV Code Signing Audit ALV Results</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EV_Code_Signing_Audit_AutoReviewStatus__c</fullName>
        <inlineHelpText>Status returned by ALV service</inlineHelpText>
        <label>EV Code Signing Audit ALV Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EV_Code_Signing_Audit_Period_End_Date__c</fullName>
        <inlineHelpText>End date of the period of time of CA operations examined by the auditor. Audit Periods must not exceed one year in duration and must be contiguous.</inlineHelpText>
        <label>EV Code Signing Audit Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EV_Code_Signing_Audit_Period_Start_Date__c</fullName>
        <inlineHelpText>Start date of the period of time of CA operations examined by the auditor.</inlineHelpText>
        <label>EV Code Signing Audit Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EV_Code_Signing_Audit_Seal_ID__c</fullName>
        <inlineHelpText>Store Seal ID to map the Report ID in CPACanada Files object</inlineHelpText>
        <label>EV Code Signing Audit Seal ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EV_Code_Signing_Audit_Statement_Date__c</fullName>
        <label>EV Code Signing Audit Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EV_Code_Signing_Audit_Statement_Link__c</fullName>
        <label>EV Code Signing Audit Statement (Link)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EV_Code_Signing_Audit_Type__c</fullName>
        <label>EV Code Signing Audit Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>WebTrust</fullName>
                </value>
                <value>
                    <fullName>ETSI EN 319 411</fullName>
                </value>
                <value>
                    <fullName>ETSI TS 102 042</fullName>
                </value>
                <value>
                    <fullName>Equivalent WebTrust</fullName>
                </value>
                <value>
                    <fullName>Equivalent ETSI EN 319 411</fullName>
                </value>
                <value>
                    <fullName>Equivalent ETSI 102 042</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EV_Code_Signing_Deviation_Comments__c</fullName>
        <label>EV Code Signing Audit Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EV_Code_Signing_Deviation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Issues or qualifications noted in audit statement</description>
        <inlineHelpText>Issues or qualifications noted in audit statement</inlineHelpText>
        <label>EV Code Signing Audit Deviation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EV_Code_Signing_Verified__c</fullName>
        <inlineHelpText>Root Store Manager to verify data fields in EV Code Signing Audit section</inlineHelpText>
        <label>EV Code Signing Audit Verified?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Verified</fullName>
                    <default>true</default>
                    <label>Not Verified</label>
                </value>
                <value>
                    <fullName>Data Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EV_SSL_Audit_ALV_Comments__c</fullName>
        <inlineHelpText>Explanation about why audit accepted when ALV status is FAIL </inlineHelpText>
        <label>EV SSL Audit ALV Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EV_SSL_Audit_Authenticity_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check only when authenticity of audit statement has been confirmed </inlineHelpText>
        <label>EV SSL Audit Authenticity Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EV_SSL_Audit_Auto_Review_Results__c</fullName>
        <inlineHelpText>Results returned by ALV service</inlineHelpText>
        <label>EV SSL Audit ALV Results</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EV_SSL_Audit_Auto_Review_Status__c</fullName>
        <inlineHelpText>Status returned by ALV service</inlineHelpText>
        <label>EV SSL Audit ALV Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EV_SSL_Audit_Gap_For_All_Root_Cases__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Rollup field for all Root Cases related to the Case (updated by trigger)</inlineHelpText>
        <label>EV SSL Audit Gap For All Root Cases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EV_SSL_Audit_Seal_ID__c</fullName>
        <inlineHelpText>Store Seal ID to map the Report ID in CPACanada Files object</inlineHelpText>
        <label>EV SSL Audit Seal ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EV_SSL_Deviation_Comments__c</fullName>
        <label>EV SSL Audit Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EV_SSL_Deviation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Issues or qualifications noted in audit statement</description>
        <inlineHelpText>Issues or qualifications noted in audit statement</inlineHelpText>
        <label>EV SSL Audit Deviation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Forbidden_Practices_Verified__c</fullName>
        <label>Forbidden Practices Verified?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Verified</fullName>
                    <default>true</default>
                    <label>Not Verified</label>
                </value>
                <value>
                    <fullName>Data Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Forbidden_Practices__c</fullName>
        <defaultValue>&apos;https://wiki.mozilla.org/CA/Forbidden_or_Problematic_Practices&apos;</defaultValue>
        <label>Forbidden Practices</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Geographic_Focus_Verified__c</fullName>
        <label>DELETE Geographic Focus (Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geographic_Focus__c</fullName>
        <defaultValue>&quot;NEED: Country or geographic region where CA typically sells certs.&quot;</defaultValue>
        <label>Geographic Focus</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>I_Acknowledge_4__c</fullName>
        <label>Acknowledge Acceptance Not Guaranteed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>I acknowledge that this application does not guarantee acceptance into Microsoft&apos;s Trusted Root Program.</fullName>
                </value>
                <value>
                    <fullName>Not Acknowledged</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>I_Acknowledge_5__c</fullName>
        <inlineHelpText>I acknowledge that if this application is approved, we will need to engage in a formal contract with Microsoft before root certificates are included in Microsoft&apos;s TRP.</inlineHelpText>
        <label>Acknowledge Need For Formal Contract</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>I acknowledge that if this application is approved, we will need to engage in a formal contract with Microsoft before root certificates are included in Microsoft&apos;s TRP.</fullName>
                </value>
                <value>
                    <fullName>Not Acknowledged</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>I_Certify_1__c</fullName>
        <inlineHelpText>I certify that I have read and will adhere to Microsoft Trusted Root Program Requirements.</inlineHelpText>
        <label>MSFT Trusted Root Program Requirements</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>I certify that I have read and will adhere to Microsoft Trusted Root Program Requirements.</fullName>
                </value>
                <value>
                    <fullName>Not Certified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>I_Certify_2_Text__c</fullName>
        <inlineHelpText>I certify that to the best of my knowledge all audits conform to Microsoft requirements as per https://aka.ms/auditreqs</inlineHelpText>
        <label>Audits Conform to MSFT&apos;s Requirements</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>I certify that to the best of my knowledge all audits conform to Microsoft requirements as per https://aka.ms/auditreqs</fullName>
                </value>
                <value>
                    <fullName>Not Certified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>I_Certify_3_Text__c</fullName>
        <inlineHelpText>I certify that all answers are true and complete to the best of my knowledge.</inlineHelpText>
        <label>Answers are True and Complete</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>I certify that all answers are true and complete to the best of my knowledge.</fullName>
                </value>
                <value>
                    <fullName>Not Certified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Impact_to_Mozilla_Users_Verified__c</fullName>
        <label>DELETE Impact to Mozilla User(Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Impact_to_Mozilla_Users__c</fullName>
        <defaultValue>&quot;NEED: Why does the CA need to have their root certificate directly included in Mozilla’s products, rather than being signed by another CA’s root certificate that is already included in NSS? &quot; + BR()+
&quot;Mozilla CA certificate policy: We require that all CAs whose certificates are distributed with our software product ... provide some service relevant to typical users of our software products&quot;</defaultValue>
        <label>DELETE Impact to Mozilla Users</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <defaultValue>&quot;You may click on the &apos;Edit&apos; and &apos;Submit&apos; buttons as many times as you need to save your changes.&quot;</defaultValue>
        <label>Instructions</label>
        <length>720</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Comments_on_Case__c</fullName>
        <label>Comments by Mozilla on Case</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Sync_Date_Time__c</fullName>
        <inlineHelpText>Updated by Sync process</inlineHelpText>
        <label>Last Sync Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latest_Case_Comment__c</fullName>
        <description>Update by workflow and field update</description>
        <label>Latest Case Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Link_to_Bugzilla_Bug__c</fullName>
        <inlineHelpText>Link to Bugzilla case request</inlineHelpText>
        <label>Link to Bugzilla Bug</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Management_Assertions_By__c</fullName>
        <description>The name (in English) of the organization who made the management assertions for the standard audit. i.e. The name of the organization that validates the data to be included in certificates signed by this issuer.</description>
        <inlineHelpText>The name (in English) of the organization who made the management assertions for the standard audit. i.e. The name of the organization that validates the data to be included in certificates signed by this issuer.</inlineHelpText>
        <label>DELETE Management Assertions By</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Microsoft_Contract_Type__c</fullName>
        <label>Microsoft Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Legacy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Microsoft_Request_Status__c</fullName>
        <label>Microsoft Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                    <default>true</default>
                    <label>Not Applicable</label>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Microsoft_Status_CA_Owner__c</fullName>
        <formula>Account.Microsoft_Status_In_Text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>CA Owner&apos;s Microsoft Status</inlineHelpText>
        <label>Microsoft Status (CA Owner)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Microsoft_Status_Root_Certs__c</fullName>
        <inlineHelpText>Rollup Microsoft Status of all Root Certs from Root Cases. If Status is &quot;Included&quot; or &quot;Change Requested&quot; then Case record shows &quot;Included&quot; else &quot;Not Yet Included&quot;.</inlineHelpText>
        <label>Microsoft Status (Root Certs)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Microsoft_Status__c</fullName>
        <label>Microsoft Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Included</fullName>
                    <default>true</default>
                    <label>Not Included</label>
                </value>
                <value>
                    <fullName>Change Requested</fullName>
                </value>
                <value>
                    <fullName>Included</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
                <value>
                    <fullName>NotBefore</fullName>
                </value>
                <value>
                    <fullName>Disabled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mozilla_Status_CA_Owner__c</fullName>
        <formula>Account.Status_In_Text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>CA Owner&apos;s Mozilla Status</inlineHelpText>
        <label>Mozilla Status (CA Owner)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mozilla_Status_Root_Certs__c</fullName>
        <inlineHelpText>Rollup Mozilla Status of all Root Certs from Root Cases. If Status is &quot;Included&quot; or &quot;Change Requested&quot; then Case record shows &quot;Included&quot; else &quot;Not Yet Included&quot;.</inlineHelpText>
        <label>Mozilla Status (Root Certs)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mozilla_Status__c</fullName>
        <label>Mozilla Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet Included</fullName>
                </value>
                <value>
                    <fullName>Change Requested</fullName>
                </value>
                <value>
                    <fullName>Included</fullName>
                </value>
                <value>
                    <fullName>Provided by CA</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
                <value>
                    <fullName>Obsolete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Contact_Department__c</fullName>
        <inlineHelpText>Department of the new POC.</inlineHelpText>
        <label>FUTURE New Contact Department</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Contact_Email__c</fullName>
        <inlineHelpText>A direct E-mail address of the new contact.</inlineHelpText>
        <label>FUTURE New Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>New_Contact_Name__c</fullName>
        <inlineHelpText>Name of a new contact filling the role of Primary POC or POC.</inlineHelpText>
        <label>FUTURE New Contact Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>New_Contact_Phone__c</fullName>
        <label>FUTURE New Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>New_Contact_Title__c</fullName>
        <inlineHelpText>Title of the new POC.</inlineHelpText>
        <label>FUTURE New Contact Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Contact_Type__c</fullName>
        <inlineHelpText>The role of new POC.</inlineHelpText>
        <label>FUTURE New Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary POC</fullName>
                </value>
                <value>
                    <fullName>POC</fullName>
                </value>
                <value>
                    <fullName>Auditor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <defaultValue>&quot;All applicants must conform to standards outlined in https://aka.ms/auditreqs. Commercial applicants must be audited by an accredited public auditor and issue certificates to the public as line of business. Government applicants do not issue certificates to the public. Government roots are technically constrained to &apos;non-commercial&apos; gTLD associated with their ccTLD. A government CA can use Internal auditors in lieu of public auditors for their annual audits. Additional information can be found at https://aka.ms/rootcertapply.&quot;</defaultValue>
        <label>Note</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Organizational_Type_Others_Verified__c</fullName>
        <label>DELETE Org Type Others (Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Organizational_Type_Others__c</fullName>
        <label>DELETE Organizational Type (Others)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Organizational_Type_Verified__c</fullName>
        <label>DELETE Organizational Type (Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Organizational_Type__c</fullName>
        <inlineHelpText>Indicate the type of organization operating this CA.</inlineHelpText>
        <label>Organizational Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Private Corporation</fullName>
                </value>
                <value>
                    <fullName>Public Corporation</fullName>
                </value>
                <value>
                    <fullName>Government Agency</fullName>
                </value>
                <value>
                    <fullName>Non-Profit Organization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Relevant_Documents__c</fullName>
        <label>Other Relevant Documents</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Policy_Documentation__c</fullName>
        <description>Further documentation or information relevant to the listed root certs.</description>
        <inlineHelpText>Further documentation or information relevant to the listed root certs.</inlineHelpText>
        <label>Policy Documentation</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Market_Customer_Base_Verified__c</fullName>
        <label>DELETE Pri Mkt / Cust Base (Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Market_Customer_Base__c</fullName>
        <defaultValue>&quot;NEED:&quot; + BR() + 
&quot;- Which types of customers does the CA serve? &quot; + BR() + 
&quot;- Are there particular vertical market segments in which it operates? &quot; + BR() + 
&quot;- Does the CA focus its activities on a particular country or other geographic region?&quot;</defaultValue>
        <inlineHelpText>Which types of customers does the CA serve?
Are there particular vertical market segments in which it operates?
Does the CA focus its activities on a particular country or other geographic region?</inlineHelpText>
        <label>Primary  Market / Customer Base</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Problem_Reporting_Mechanism__c</fullName>
        <defaultValue>IF ($RecordType.Name = &quot;CA Root Inclusion Request&quot;, 
&quot;NEED: An email address (that the CA closely monitors) for reporting suspected Private Key Compromise, Certificate misuse, or other types of fraud, compromise, or any other matter related to certificates.&quot;, 
&quot;&quot;)</defaultValue>
        <inlineHelpText>Email address or URL for reporting suspected Private Key Compromise, Certificate misuse, or other types of fraud, compromise, misuse, inappropriate conduct, or any other matter related to Certificates.</inlineHelpText>
        <label>Problem Reporting Mechanism</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Problematic_Practices_Statement__c</fullName>
        <defaultValue>&quot;I have reviewed Mozilla&apos;s lists of Forbidden and Potentially Problematic Practices, and confirm that we do not do those practices, with exceptions and clarifications noted in the text box below.&quot;</defaultValue>
        <label>DELETE Problematic Practices Statement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Close_without_Sync__c</fullName>
        <label>Reason for Close without Sync</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Recognized_CAA_Domains__c</fullName>
        <defaultValue>IF ($RecordType.Name = &quot;CA Root Inclusion Request&quot;, 
&quot;NEED: Domain names that the CA recognizes in Certification Authority Authorization (CAA) \&quot;issue\&quot; and \&quot;issuewild\&quot; records as permitting it to issue. Comma-separated list.&quot;, 
&quot;&quot;)</defaultValue>
        <inlineHelpText>Certification Authority Authorization (CAA) domain names recognized in a CAA record&apos;s issue and issuewild property tags. Comma-separated list.</inlineHelpText>
        <label>Recognized CAA Domains</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recommended_Practices_Statement__c</fullName>
        <defaultValue>&quot;I have reviewed Mozilla&apos;s lists of Required and Recommended Practices, and confirm that we follow those practices, with exceptions and clarifications noted in the text box below.&quot;</defaultValue>
        <label>DELETE Recommended Practices Statement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <inlineHelpText>Information verification phases</inlineHelpText>
        <label>Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial Request Received</fullName>
                    <default>true</default>
                    <label>Initial Request Received</label>
                </value>
                <value>
                    <fullName>Information Verification In Process</fullName>
                </value>
                <value>
                    <fullName>In Detailed CP/CPS Review</fullName>
                </value>
                <value>
                    <fullName>In Public Discussion</fullName>
                </value>
                <value>
                    <fullName>Discussion on Hold</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved, Pending Inclusion</fullName>
                </value>
                <value>
                    <fullName>Approved, Pending Inclusion and EV</fullName>
                </value>
                <value>
                    <fullName>Included, Pending EV</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Request Withdrawn by CA</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Closed - CA Unresponsive</fullName>
                </value>
                <value>
                    <fullName>Data Verified</fullName>
                </value>
                <value>
                    <fullName>CA Action Items from Discussion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>